<resources>
    <string name="app_name">Attendance-Master</string>
    <string name="splash_act">AttendanceMaster</string>
    <string name="edt_username">Username</string>
    <string name="edt_password">Passsword</string>
    <string name="btn_login">Login</string>
    <string name="logOut">Logout</string>
    <string name="user_p_dashboard">Manage users efficiently by adding, editing, or removing them in the system</string>
    <string name="qrcode_p_dashboard">Quickly scan QR codes to register attendance </string>
    <string name="attendance_list_p_dashboard">View and manage the attendance records of all users in the system</string>
    <string name="user_dashboard">User Management</string>
    <string name="qrcode_dashboard">Scan QR Code</string>
    <string name="attendance_list_dashboard">Attendance List</string>
    <string name="user_btn_dashboard">GO to User Management</string>
    <string name="attendance_btn_dashboard">View Attendance List</string>
</resources>