<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".AdminFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dark_jade_green"
        android:background="@drawable/btn_round_corner"
        android:orientation="vertical"
        android:elevation="4dp"
        android:layout_marginBottom="30dp"
        android:padding="25dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_dashboard"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_p_dashboard"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:letterSpacing="0.1"
            android:layout_marginBottom="15dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner"
            android:text="@string/user_btn_dashboard"
            android:textAllCaps="false" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_round_corner"
        android:backgroundTint="@color/dark_jade_green"
        android:orientation="vertical"
        android:elevation="4dp"
        android:layout_marginBottom="30dp"
        android:padding="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/qrcode_dashboard"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qrcode_p_dashboard"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:letterSpacing="0.1"
            android:layout_marginBottom="15dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner"
            android:text="@string/qrcode_dashboard"
            android:textAllCaps="false"
            android:textColor="@color/white"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_round_corner"
        android:backgroundTint="@color/dark_jade_green"
        android:orientation="vertical"
        android:elevation="4dp"
        android:padding="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/attendance_list_dashboard"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attendance_list_p_dashboard"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:letterSpacing="0.1"
            android:layout_marginBottom="15dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner"
            android:textColor="@color/white"
            android:text="@string/attendance_btn_dashboard"
            android:textAllCaps="false" />


    </LinearLayout>


</LinearLayout>
